...
                                <rect key="frame" x="180" y="424" width="71" height="72"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="60"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nps-5U-DJY" userLabel="Timer">
                                <rect key="frame" x="87" y="164" width="30" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" label="Timer"/>
                                <gestureRecognizers/>
                                <connections>
                                    <action selector="buttonPressedDown:" destination="q3R-cr-6Hq" eventType="touchDown" id="V5l-90-AAb"/>
...
