...
        notificationTimerValue -= 1
        CountdownLabel.text = String(notificationTimerValue)
        if (notificationTimerValue <= 0)
        {
            notificationTimer.invalidate()
 
            let alert = UIAlertController(title: "The Emergency Notification has been sent.", message: "", preferredStyle: .alert)
 
            self.present(alert, animated: true, completion: nil)
            DispatchQueue.main.asyncAfter(deadline: .now() + 3) {
                alert.dismiss(animated: true, completion: nil)
                Services.transitionHome(self)
            }
...
