...
                                                <connections>
                                                    <segue destination="UAW-SP-lXV" kind="presentation" id="n5A-rk-vut"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BjU-9F-vfA" userLabel="EmergencyContact">
                                                <rect key="frame" x="186" y="0.0" width="185" height="209"/>
                                                <state key="normal" image="Emergency"/>
                                                <connections>
                                                    <segue destination="9RS-15-nGq" kind="show" id="FPB-T9-307"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
...
